Setup scripts to make videos using trr. Fix some more issues with trr files. FIx a critical error where traj werent being moved correctly from device to host

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ out*
 /distribution/debian/build/*
 !/distribution/debian/build/*.deb
 *.debhelper*
+
+/dev/VMDscripts/*
+!/dev/VMDscripts/instructions.txt
+!/dev/VMDscripts/makefilm.tcl
