Make the distribution/arch pipeline easier to use. Fix so it compiles on GCC. Fix errors in buildmembrane

--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -32,8 +32,9 @@ target_include_directories(LIMA_BASE PUBLIC
 
 #target_precompile_headers(LIMA_BASE PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:<vector>>" )
   
-target_link_libraries(LIMA_BASE 
+target_link_libraries(LIMA_BASE PUBLIC
     LIMA_DEPENDS
+    TBB::tbb
 )
 
 
