--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ endif()
 find_package(OpenGL REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 find_package(PythonLibs REQUIRED)
+find_package(TBB REQUIRED)
 
 #include_directories(${PYTHON_INCLUDE_DIRS})
 #link_directories(${PYTHON_LIBRARIES})
