--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,10 @@ endif()
 find_package(OpenGL REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 find_package(PythonLibs REQUIRED)
-find_package(TBB REQUIRED)
 
+if(UNIX)
+	find_package(TBB REQUIRED)
+endif()
 #include_directories(${PYTHON_INCLUDE_DIRS})
 #link_directories(${PYTHON_LIBRARIES})
 
