--- a/distribution/arch/PKGBUILD
+++ b/distribution/arch/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="The Molecular Dynamics engine for the Generative Era"
 arch=('x86_64')
 url="http://www.lima-dynamics.com"
 license=('LicenseRef-Proprietary')
-depends=('glibc' 'glu' 'bash' 'libglvnd')
+depends=('glibc' 'glu' 'bash' 'libglvnd' 'onetbb')
 source=("https://github.com/DanielRJohansen/LIMAMD/archive/main.tar.gz")
 sha256sums=('1da135c607bfa9566bfb8a8e0fc45a3d04d9da67ab9296b683dc193b3f937fd1')
 
