Move all temperature handling to Thrust, use vel_prev instead of logging buffers

--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -4,7 +4,7 @@
 # in order to access __constant__ memory
 add_library(LIMA_ENGINE STATIC
     src/Engine.cu
-    "src/Thermostat.cpp"       # TODO: Make .cpp file
+           # TODO: Make .cpp file
     src/ChargeOcttree.cu
     src/ConvexHullEngine.cu
  "src/SimulationDevice.cpp")
