Dont track VMDscript frames

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ out*
 /distribution/debian/build/*
 !/distribution/debian/build/*.deb
 *.debhelper*
+
+dev/VMDscripts/frames/*
+dev/VMDscripts/*.gro
+dev/VMDscripts/*.trr
