--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ project(lima LANGUAGES CXX CUDA C)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 20)
+//set(CMAKE_BUILD_TYPE Debug)
 
 
 set(CUDA_SEPARABLE_COMPILATION ON)
