--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -19,6 +19,12 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include
 target_link_libraries(LIMA_ENGINE LIMA_BASE)
 #target_link_libraries(LIMA_ENGINE ${PYTHON_LIBRARIES})
 
+#target_compile_options(LIMA_ENGINE PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
+#                       --generate-line-info
+#                       --use_fast_math
+#                       --relocatable-device-code=true
+#                       >)
+
 if (UNIX)
     target_compile_options(LIMA_ENGINE PRIVATE -use_fast_math -O3)
 elseif (WIN32)
