Complete replace bridges. Compounds no longer contains bonds, inly references to bondgroups

--- a/code/LIMA_TOOLS/CMakeLists.txt
+++ b/code/LIMA_TOOLS/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_library(LIMA_TOOLS STATIC
     src/SimulationBuilder.cpp
     src/CompoundBuilder.cpp
+    src/BondgroupFactory.cpp
 )
 
 target_include_directories(LIMA_TOOLS PRIVATE
