Last checkpoint before shifting to new paradigm for translating toplogyfile to compounds

--- a/code/LIMA_TOOLS/CMakeLists.txt
+++ b/code/LIMA_TOOLS/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(LIMA_TOOLS STATIC
     src/SimulationBuilder.cpp
     src/CompoundBuilder.cpp
     src/BondgroupFactory.cpp
-)
+ "src/CompoundFactory.cpp")
 
 target_include_directories(LIMA_TOOLS PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/src
