Re-implement LR ES in a deterministic algo

--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(LIMA_ENGINE STATIC
     src/Engine.cu
     src/ChargeOcttree.cu
     src/ConvexHullEngine.cu
- "src/SimulationDevice.cpp")
+ "src/SimulationDevice.cu")
 
 target_include_directories(LIMA_ENGINE PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/src
