--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -16,7 +16,7 @@ target_include_directories(LIMA_ENGINE PUBLIC
 ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_link_libraries(LIMA_ENGINE LIMA_BASE)
+target_link_libraries(LIMA_ENGINE LIMA_BASE CUDA::cufft)
 #target_link_libraries(LIMA_ENGINE ${PYTHON_LIBRARIES})
 
 #target_compile_options(LIMA_ENGINE PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
