We now have 2 working unittests for PME

--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(LIMA_BASE STATIC
     src/MoleculeUtils.cpp 
     src/Topologyfile.cpp
     src/BoxGrid.cu
+    src/PlotUtils.cpp
 )
 
 target_include_directories(LIMA_BASE PRIVATE 
