Remove obsolute ES solutions and chargeocttree. Rename PME files Make engine a single .cu unit again Make convexhullengine a separate cmake project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_compile_definitions(GLEW_STATIC)
 add_subdirectory(code/LIMA_DEPENDS)
 add_subdirectory(code/LIMA_BASE)
 add_subdirectory(code/LIMA_ENGINE)
+add_subdirectory(code/LIMA_CONVEXHULLENGINE)
 add_subdirectory(code/LIMA_TOOLS)
 add_subdirectory(code/LIMA_MD)
 add_subdirectory(code/LIMA_TESTS)
