--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -16,13 +16,14 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 target_link_libraries(LIMA_ENGINE LIMA_BASE CUDA::cufft)
-#target_link_libraries(LIMA_ENGINE ${PYTHON_LIBRARIES})
 
-#target_compile_options(LIMA_ENGINE PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-#                       --generate-line-info
-#                       --use_fast_math
-#                       --relocatable-device-code=true
-#                       >)
+target_compile_options(LIMA_ENGINE PRIVATE
+    $<$<COMPILE_LANGUAGE:CUDA>: 
+        --lcufft_static
+        --lculibos
+    >
+)
+
 
 if (UNIX)
     target_compile_options(LIMA_ENGINE PRIVATE -use_fast_math -O3)
