--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_CXX_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 23)
 #set(CMAKE_BUILD_TYPE Debug)
 
-
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CUDA_SEPARABLE_COMPILATION ON)
 
 
